--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Barbearia Alura</title>
+		<title>Espaço Pulante</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
+			<h1 class="titulo-principal">Espaço Pulante</h1>
 		</header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+			<h2 class="titulo-centralizado">Sobre nosso espaço</h2>
 	 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+			<p>Localizada no coração da cidade a <strong>o Melhor lugar infantil</strong> traz um ótimo lugar para festas infantis e lazer familiar. Fundada em 2019, a pulars já é destaque na cidade e conquista novos coraçoes a cada dia.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar felicidade e qualidade de vida aos clientes"</strong>.</em></p>
 
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</div>
