--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 		</header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre nosso espaço</h2>
+			<h2 class="titulo-centralizado">Sobre o Espaço Pulante</h2>
 	 
-			<p>Localizada no coração da cidade a <strong>o Melhor lugar infantil</strong> traz um ótimo lugar para festas infantis e lazer familiar. Fundada em 2019, a pulars já é destaque na cidade e conquista novos coraçoes a cada dia.</p>
+			<p>Localizada no coração da cidade a <strong>Espaço Pulante</strong> traz para o mercado o que há de melhor sua criança. Com uma equipe expecializzada em cuidados infantis.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar felicidade e qualidade de vida aos clientes"</strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar  qualidade de vida a suas crianças"</strong>.</em></p>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+			<p>Oferecemos profissionais experientes e antenados às necessidades de cada criança especial</p>
 		</div>
 
 		<div class="beneficios">
